force-app/main/default/objects/PDRI__Deployment_Bundle__c/PDRI__Deployment_Bundle__c.object-meta.xml
<CustomObject>
    <label>Deployment Bundle</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>