force-app/main/default/objects/PDRI__Deployment_Bundle__c/fields/PDRI__Deployment_Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Bundle_Name__c</fullName>
    <label>Deployment Bundle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>