force-app/main/default/objects/PDRI__Deployment_Bundle__c/fields/PDRI__Deployment_Bundle_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Bundle_Type__c</fullName>
    <label>Deployment Bundle Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Metadata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>