force-app/main/default/objects/PDRI__Deployment_Bundle__c/fields/PDRI__Description__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>