force-app/main/default/objects/PDRI__Deployment_Bundle__c/fields/PDRI__Origin__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Change Type</fullName>
            </value>
            <value>
                <fullName>value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>