force-app/main/default/objects/PDRI__Deployment_Bundle__c/fields/PDRI__Skip_Data_On_Metadata_Failure__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Skip_Data_On_Metadata_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Data On Metadata Failure</label>
    <type>Checkbox</type>
</CustomField>